# jar

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  Jar.lean  Makefile  README.md  SECURITY.md  docker-compose.yml  genesis.json  lakefile.lean  ranking.json  scores.json
.github/cache/: genesis.json
.github/workflows/: book.yml  ci-grey.yml  ci.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Genesis/: Design.lean  State.lean
Jar/: Accumulation.lean  Codec.lean  Consensus.lean  Crypto.lean  Erasure.lean  Json.lean  Merkle.lean  Notation.lean  PVM.lean  Services.lean  State.lean  StateSerialization.lean  Variant.lean
Jar/PVM/: Decode.lean  GasCostSinglePass.lean  Instructions.lean  Interpreter.lean  Memory.lean
Jar/Test/: Accumulate.lean  AccumulateJson.lean  Arbitrary.lean  Assurances.lean  AssurancesJson.lean  Authorizations.lean  AuthorizationsJson.lean  BlockTest.lean  BlockTestMain.lean  Disputes.lean  DisputesJson.lean  Ed25519Test.lean  Ed25519TestMain.lean  ErasureTest.lean  History.lean  HistoryJson.lean  Preimages.lean  PreimagesJson.lean  Properties.lean  Reports.lean  ReportsJson.lean  Safrole.lean  SafroleJson.lean  Statistics.lean  StatisticsJson.lean  StfServer.lean
Jar/Types/: Accounts.lean  Config.lean  Numerics.lean  Validators.lean
crates/grey/: Cargo.toml
crates/grey-bench/: Cargo.toml
crates/grey-network/: Cargo.toml
crates/grey-pvm/: Cargo.toml
crates/grey-pvm/src/: lib.rs  vm.rs
crates/grey-pvm/src/recompiler/: asm.rs  codegen.rs  mod.rs
crates/grey-services/: Cargo.toml
crates/javm/: Cargo.toml
crypto-ffi/: bridge.c
crypto-ffi/src/: lib.rs
docs/: jit-optimization.md  network-public.md  patience-tax.md  pvm-interpreter-optimization.md  pvm-recompiler-optimization.md  pvm-recompiler-sandboxing.md  pvm-redesign.md
docs/plans/: 2026-04-01-grandpa-chain-selection-design.md  (+1 more)
grey/: Dockerfile
grey/fuzz/: Cargo.toml
rust/jar-kernel/: Cargo.toml  build.rs
rust/jar-kernel/src/: apply_block.rs  attest.rs  cap_registry.rs  cnode_ops.rs  code_blobs.rs  crypto.rs  crypto_primitives.rs  dispatch.rs  genesis.rs  host_abi.rs  host_calls.rs  invocation.rs  kernel.rs  lib.rs  pinning.rs  proposer.rs  reach.rs  snapshot.rs  state_root.rs  storage.rs  transact.rs
rust/jar-kernel/src/cap/: capability.rs  pinning.rs
rust/jar-kernel/src/runtime/: hardware.rs  in_memory.rs  mod.rs
rust/jar-kernel/src/state/: code_blobs.rs  mod.rs  state_root.rs  vault_init.rs
rust/jar-kernel/src/types/: block.rs  cap.rs  mod.rs  runtime.rs  slot.rs  state.rs  trace.rs
rust/jar-kernel/src/vm/: foreign_cnode.rs  host_abi.rs  mod.rs
rust/jar-kernel/src/vm/host_calls/: mod.rs
rust/jar-kernel/tests/: apply_block.rs  cap_registry.rs  cnode_move.rs  dispatch_pipeline.rs  fault_safety.rs  snapshot.rs  storage_quota.rs
tools/: gen_accumulate_tests.py  genesis-replay.sh  legacy-commits.json
(+390 files in other folders)
