[workspace]
resolver = "3"
members = [
    "tools/jar-genesis",
    "rust/build-crate",
    "rust/build-javm",
    "rust/build-pvm",
    "rust/javm",
    "rust/javm-bench",
    "rust/javm-builtins",
    "rust/javm-guest-tests",
    "rust/javm-transpiler",
    "rust/scale",
    "rust/scale-derive",
    "rust/jar-kernel",
    "rust/jar",
    "rust/jar-test-services/halt",
    "rust/jar-test-services/slot_clear",
    "components/benches/blake2b",
    "components/benches/ecrecover",
    "components/benches/ed25519",
    "components/benches/keccak",
    "components/benches/prime-sieve",
]
exclude = [
    "grey",
    "spec/crypto-ffi",
    "spec/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = [ "Bitarray GmbH <legal@bitarray.dev>" ]

[workspace.dependencies]
# Internal crates
javm = { path = "rust/javm" }
javm-transpiler = { path = "rust/javm-transpiler" }
jar-kernel = { path = "rust/jar-kernel" }
scale = { path = "rust/scale", default-features = false, features = ["std"] }
scale-derive = { path = "rust/scale-derive" }

# External dependencies
blake2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bip39 = "2.2.2"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ark-vrf = { version = "0.2", features = ["bandersnatch", "ring"] }
blst = "0.3"
reed-solomon-simd = "3.1"
redb = "3.1"
tracing = "0.1"
tracing-test = "0.2"
proptest = "1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.56", features = ["gossipsub", "noise", "tcp", "yamux", "tokio", "macros", "identify", "request-response"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }


[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package.polkavm-linux-raw]
opt-level = 0
