[package]
name = "grey-pvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polkadot Virtual Machine (PVM) implementation for JAM."

[dependencies]
grey-types = { workspace = true }
libc = "0.2"
thiserror = { workspace = true }
tracing = { workspace = true }
